Numerus bug fixes and improved editor for boardgame. Fixed CKEditor readonly when created in invisible field.

--- a/css/boardgame.css
+++ b/css/boardgame.css
@@ -24,13 +24,25 @@
   background: -o-linear-gradient(top, #67a6e7, #4085cd);
   background: -ms-linear-gradient(top, #67a6e7, #4085cd);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#67a6e7', endColorstr='#4085cd',GradientType=0);
+  opacity: 0.85;
+  filter: alpha(opacity=85);
 }
+.hotspot.h5p-default:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.hotspot.h5p-passed {
+  background: -webkit-linear-gradient(top, #9ae767, #79cd40);
+}
+.hotspot.h5p-failed {
+  background: -webkit-linear-gradient(top, #e76773, #cd404a);
+}
+
 .action-container {
   position: relative;
   z-index: 300;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.8);
 }
 .progress {
   position: absolute;
@@ -172,7 +184,7 @@
   top: 5%;
   left: 5%;
   width: 90%;
-  max-height: 90%;
+  height: 90%;
   background: rgba(255,255,255,.9);
   box-shadow: 0 0 10px 0 #515151;
 }
